--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -6,10 +6,10 @@ on: [push, workflow_dispatch]
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
   RESOURCE-GROUP: RG-Insight-GitHub-24
-  LOCATION: North Central US
+  LOCATION: NorthCentralUS
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: b45d53e5-4f7a-417e-a01b-26474a637f58
-  WEBAPP-NAME: InsightDevOpsWebApp
+  WEBAPP-NAME: InsightDevOpsWebApp08
 
 
 jobs:
